--- a/index.html
+++ b/index.html
@@ -23,81 +23,81 @@
 
 <body>
 
-  <div>
-    <header id="header" class="header fixed-top">
-      <div class="container">
-        <div class="header-container d-flex align-items-center justify-content-between">
-
-          <!-- Logo -->
-          <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-            <img src="assets/img/Logo.avif" alt="">
-          </a>
-
-          <!-- navbar -->
-          <nav id="navmenu" class="navmenu">
-            <ul>
-              <li><a href="#hero" class="active">Home</a></li>
-              <li class="dropdown"><a href="#"><span>Features</span> <i
-                    class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Dropdown 1</a></li>
-                  <li><a href="#">Dropdown 2</a></li>
-                  <li><a href="#">Dropdown 3</a></li>
-                  <li><a href="#">Dropdown 4</a></li>
-                </ul>
-              </li>
-              <li><a href="#pricing">Pricing</a></li>
-              <li><a href="#pricing">Blog</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-            <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-          </nav>
-
+    <section class="main-header">
+      <header id="header" class="header fixed-top">
+        <div class="container">
+          <div class="header-container d-flex align-items-center justify-content-between">
+  
+            <!-- Logo -->
+            <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+              <img src="assets/img/Logo.avif" alt="">
+            </a>
+  
+            <!-- navbar -->
+            <nav id="navmenu" class="navmenu">
+              <ul>
+                <li><a href="#hero" class="active">Home</a></li>
+                <li class="dropdown"><a href="#"><span>Features</span> <i
+                      class="bi bi-chevron-down toggle-dropdown"></i></a>
+                  <ul>
+                    <li><a href="#">Dropdown 1</a></li>
+                    <li><a href="#">Dropdown 2</a></li>
+                    <li><a href="#">Dropdown 3</a></li>
+                    <li><a href="#">Dropdown 4</a></li>
+                  </ul>
+                </li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li><a href="#pricing">Blog</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+              <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+            </nav>
+  
+          </div>
         </div>
-      </div>
-
-    </header>
-
-    <!-- Hero Section -->
-    <section class="hero-section d-flex align-items-center overflow-hidden">
-      <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col-lg-10">
-            <!-- Hero Badge -->
-            <div class="hero-badge">
-              <i class="bi bi-dot"></i> 1Card Campus Solutions
-            </div>
-
-            <!-- Hero Title -->
-            <h1 class="hero-title">
-              The Smart Card for Smart Campuses
-            </h1>
-
-            <!-- Hero Description -->
-            <p class="hero-description">
-              Transform your campus operations with a single, intelligent card that manages everything from printing and
-              scanning to mobile recharges and bus fares, ensuring a smooth, connected experience.
-            </p>
-
-            <!-- CTA Buttons -->
-            <div class="d-flex justify-content-center flex-wrap">
-              <button class="btn-demo">
-                Book a Demo
-              </button>
-              <button class=" btn-video">
-                <i class="bi bi-play-fill"></i>
-                Watch a video
-              </button>
-            </div>
-            <div class="hero-image">
-              <img src="assets/img/hero image.avif" alt="">
+  
+      </header>
+  
+      <!-- Hero Section -->
+      <div class="hero-section d-flex align-items-center overflow-hidden">
+        <div class="container">
+          <div class="row justify-content-center text-center">
+            <div class="col-lg-10">
+              <!-- Hero Badge -->
+              <div class="hero-badge">
+                <i class="bi bi-dot"></i> 1Card Campus Solutions
+              </div>
+  
+              <!-- Hero Title -->
+              <h1 class="hero-title">
+                The Smart Card for Smart Campuses
+              </h1>
+  
+              <!-- Hero Description -->
+              <p class="hero-description">
+                Transform your campus operations with a single, intelligent card that manages everything from printing and
+                scanning to mobile recharges and bus fares, ensuring a smooth, connected experience.
+              </p>
+  
+              <!-- CTA Buttons -->
+              <div class="d-flex justify-content-center flex-wrap">
+                <button class="btn-demo">
+                  Book a Demo
+                </button>
+                <button class=" btn-video">
+                  <i class="bi bi-play-fill"></i>
+                  Watch a video
+                </button>
+              </div>
+              <div class="hero-image">
+                <img src="assets/img/hero image.avif" alt="">
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- Hero Section -->
     </section>
-    <!-- /Hero Section -->
-  </div>
 
 
   <!-- About Section -->
