feat: add logo marquee section and enhance header styles for improved layout

--- a/index.html
+++ b/index.html
@@ -99,7 +99,34 @@
       <!-- Hero Section -->
     </section>
 
-
+    <!-- Logo Marquee Section -->
+    <section class="logo-marquee-section">
+      <div class="logo-marquee-container">
+        <div class="fade-overlay left"></div>
+        <div class="marquee-wrapper">
+          <div class="marquee">
+            <div class="marquee-group">
+              <img src="assets/img/2.avif" alt="Client Logo">
+              <img src="assets/img/3.avif" alt="Client Logo">
+              <img src="assets/img/4.avif" alt="Client Logo">
+              <img src="assets/img/5.avif" alt="Client Logo">
+              <img src="assets/img/6.avif" alt="Client Logo">
+              <img src="assets/img/2.avif" alt="Client Logo">
+            </div>
+            <!-- Duplicate for seamless loop -->
+            <div class="marquee-group" aria-hidden="true">
+              <img src="assets/img/2.avif" alt="Client Logo">
+              <img src="assets/img/3.avif" alt="Client Logo">
+              <img src="assets/img/4.avif" alt="Client Logo">
+              <img src="assets/img/5.avif" alt="Client Logo">
+              <img src="assets/img/6.avif" alt="Client Logo">
+              <img src="assets/img/2.avif" alt="Client Logo">
+            </div>
+          </div>
+        </div>
+        <div class="fade-overlay right"></div>
+      </div>
+    </section>
   <!-- About Section -->
   <section id="about" class="about section">
 
