feat: add stats section with performance metrics and enhance layout for improved user engagement

--- a/index.html
+++ b/index.html
@@ -23,110 +23,160 @@
 
 <body>
 
-    <section class="main-header">
-      <header id="header" class="header fixed-top">
-        <div class="container">
-          <div class="header-container d-flex align-items-center justify-content-between">
-  
-            <!-- Logo -->
-            <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-              <img src="assets/img/Logo.avif" alt="">
-            </a>
-  
-            <!-- navbar -->
-            <nav id="navmenu" class="navmenu">
-              <ul>
-                <li><a href="#hero" class="active">Home</a></li>
-                <li class="dropdown"><a href="#"><span>Features</span> <i
-                      class="bi bi-chevron-down toggle-dropdown"></i></a>
-                  <ul>
-                    <li><a href="#">Dropdown 1</a></li>
-                    <li><a href="#">Dropdown 2</a></li>
-                    <li><a href="#">Dropdown 3</a></li>
-                    <li><a href="#">Dropdown 4</a></li>
-                  </ul>
-                </li>
-                <li><a href="#pricing">Pricing</a></li>
-                <li><a href="#pricing">Blog</a></li>
-                <li><a href="#contact">Contact</a></li>
-              </ul>
-              <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-            </nav>
-  
-          </div>
-        </div>
-  
-      </header>
-  
-      <!-- Hero Section -->
-      <div class="hero-section d-flex align-items-center overflow-hidden">
-        <div class="container">
-          <div class="row justify-content-center text-center">
-            <div class="col-lg-10">
-              <!-- Hero Badge -->
-              <div class="hero-badge">
-                <i class="bi bi-dot"></i> 1Card Campus Solutions
-              </div>
-  
-              <!-- Hero Title -->
-              <h1 class="hero-title">
-                The Smart Card for Smart Campuses
-              </h1>
-  
-              <!-- Hero Description -->
-              <p class="hero-description">
-                Transform your campus operations with a single, intelligent card that manages everything from printing and
-                scanning to mobile recharges and bus fares, ensuring a smooth, connected experience.
-              </p>
-  
-              <!-- CTA Buttons -->
-              <div class="d-flex justify-content-center flex-wrap">
-                <button class="btn-demo">
-                  Book a Demo
-                </button>
-                <button class=" btn-video">
-                  <i class="bi bi-play-fill"></i>
-                  Watch a video
-                </button>
-              </div>
-              <div class="hero-image">
-                <img src="assets/img/hero image.avif" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Hero Section -->
-    </section>
+  <section class="main-header">
+    <header id="header" class="header fixed-top">
+      <div class="container">
+        <div class="header-container d-flex align-items-center justify-content-between">
 
-    <!-- Logo Marquee Section -->
-    <section class="logo-marquee-section">
-      <div class="logo-marquee-container">
-        <div class="fade-overlay left"></div>
-        <div class="marquee-wrapper">
-          <div class="marquee">
-            <div class="marquee-group">
-              <img src="assets/img/2.avif" alt="Client Logo">
-              <img src="assets/img/3.avif" alt="Client Logo">
-              <img src="assets/img/4.avif" alt="Client Logo">
-              <img src="assets/img/5.avif" alt="Client Logo">
-              <img src="assets/img/6.avif" alt="Client Logo">
-              <img src="assets/img/2.avif" alt="Client Logo">
+          <!-- Logo -->
+          <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+            <img src="assets/img/Logo.avif" alt="">
+          </a>
+
+          <!-- navbar -->
+          <nav id="navmenu" class="navmenu">
+            <ul>
+              <li><a href="#hero" class="active">Home</a></li>
+              <li class="dropdown"><a href="#"><span>Features</span> <i
+                    class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="#">Dropdown 1</a></li>
+                  <li><a href="#">Dropdown 2</a></li>
+                  <li><a href="#">Dropdown 3</a></li>
+                  <li><a href="#">Dropdown 4</a></li>
+                </ul>
+              </li>
+              <li><a href="#pricing">Pricing</a></li>
+              <li><a href="#pricing">Blog</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+            <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+          </nav>
+
+        </div>
+      </div>
+
+    </header>
+
+    <!-- Hero Section -->
+    <div class="hero-section d-flex align-items-center overflow-hidden">
+      <div class="container">
+        <div class="row justify-content-center text-center">
+          <div class="col-lg-10">
+            <!-- Hero Badge -->
+            <div class="hero-badge">
+              <i class="bi bi-dot"></i> 1Card Campus Solutions
             </div>
-            <!-- Duplicate for seamless loop -->
-            <div class="marquee-group" aria-hidden="true">
-              <img src="assets/img/2.avif" alt="Client Logo">
-              <img src="assets/img/3.avif" alt="Client Logo">
-              <img src="assets/img/4.avif" alt="Client Logo">
-              <img src="assets/img/5.avif" alt="Client Logo">
-              <img src="assets/img/6.avif" alt="Client Logo">
-              <img src="assets/img/2.avif" alt="Client Logo">
+
+            <!-- Hero Title -->
+            <h1 class="hero-title">
+              The Smart Card for Smart Campuses
+            </h1>
+
+            <!-- Hero Description -->
+            <p class="hero-description">
+              Transform your campus operations with a single, intelligent card that manages everything from printing and
+              scanning to mobile recharges and bus fares, ensuring a smooth, connected experience.
+            </p>
+
+            <!-- CTA Buttons -->
+            <div class="d-flex justify-content-center flex-wrap">
+              <button class="btn-demo">
+                Book a Demo
+              </button>
+              <button class=" btn-video">
+                <i class="bi bi-play-fill"></i>
+                Watch a video
+              </button>
+            </div>
+            <div class="hero-image">
+              <img src="assets/img/hero image.avif" alt="">
             </div>
           </div>
         </div>
-        <div class="fade-overlay right"></div>
       </div>
-    </section>
+    </div>
+    <!-- Hero Section -->
+  </section>
+
+  <!-- Logo Marquee Section -->
+  <section class="logo-marquee-section">
+    <div class="logo-marquee-container">
+      <div class="fade-overlay left"></div>
+      <div class="marquee-wrapper">
+        <div class="marquee">
+          <div class="marquee-group">
+            <img src="assets/img/2.avif" alt="Client Logo">
+            <img src="assets/img/3.avif" alt="Client Logo">
+            <img src="assets/img/4.avif" alt="Client Logo">
+            <img src="assets/img/5.avif" alt="Client Logo">
+            <img src="assets/img/6.avif" alt="Client Logo">
+            <img src="assets/img/2.avif" alt="Client Logo">
+          </div>
+          <!-- Duplicate for seamless loop -->
+          <div class="marquee-group" aria-hidden="true">
+            <img src="assets/img/2.avif" alt="Client Logo">
+            <img src="assets/img/3.avif" alt="Client Logo">
+            <img src="assets/img/4.avif" alt="Client Logo">
+            <img src="assets/img/5.avif" alt="Client Logo">
+            <img src="assets/img/6.avif" alt="Client Logo">
+            <img src="assets/img/2.avif" alt="Client Logo">
+          </div>
+        </div>
+      </div>
+      <div class="fade-overlay right"></div>
+    </div>
+  </section>
+  <!-- End Logo Marquee Section -->
+
+
+  <!-- Stats Section -->
+<section class="stats-section">
+  <div class="container text-center">
+    <div class="stats-badge">← Impressive Stats</div>
+    
+    <h2 class="stats-title">Our Results in Numbers</h2>
+    <p class="stats-description">
+      Discover the real impact 1Card has made on campus management, security, and financial transactions across our growing community.
+    </p>
+
+    <div class="row g-4">
+      <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="100">
+        <div class="stats-card">
+          <h3 class="stats-number">80%</h3>
+          <h4 class="stats-label">of Partner Campuses Reduce Overhead Costs</h4>
+          <p class="stats-info">By unifying credential management and payment processing, 1Card streamlines campus operations, saving valuable time and resources.</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="200">
+        <div class="stats-card">
+          <h3 class="stats-number">$1.6M<span>+</span></h3>
+          <h4 class="stats-label">in Total Digital Transactions Processed</h4>
+          <p class="stats-info">Our secure payment infrastructure handles thousands of transactions daily, ensuring quick, cashless payments for students and staff.</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="300">
+        <div class="stats-card">
+          <h3 class="stats-number">95%</h3>
+          <h4 class="stats-label">of Users Report a More Convenient Campus Experience</h4>
+          <p class="stats-info">From canteen bills to parking, 1Card simplifies campus life with a single, all-in-one solution.</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="400">
+        <div class="stats-card">
+          <h3 class="stats-number">2.8M<span>+</span></h3>
+          <h4 class="stats-label">Secure ID Verifications Completed</h4>
+          <p class="stats-info">Our system verifies identities across multiple campus facilities, ensuring safety and security for everyone.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+    <!-- End Stats Section -->
+
   <!-- About Section -->
   <section id="about" class="about section">
 
