Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -131,51 +131,69 @@
 
 
   <!-- Stats Section -->
-<section class="stats-section">
-  <div class="container text-center">
-    <div class="stats-badge">← Impressive Stats</div>
-    
-    <h2 class="stats-title">Our Results in Numbers</h2>
-    <p class="stats-description">
-      Discover the real impact 1Card has made on campus management, security, and financial transactions across our growing community.
-    </p>
+  <section class="stats-section">
+    <div class="container text-center">
+      <div class="stats-badge">← Impressive Stats</div>
 
-    <div class="row g-4">
-      <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="100">
-        <div class="stats-card">
-          <h3 class="stats-number">80%</h3>
-          <h4 class="stats-label">of Partner Campuses Reduce Overhead Costs</h4>
-          <p class="stats-info">By unifying credential management and payment processing, 1Card streamlines campus operations, saving valuable time and resources.</p>
+      <h2 class="stats-title">Our Results in Numbers</h2>
+      <p class="stats-description">
+        Discover the real impact 1Card has made on campus management, security, and financial transactions across our
+        growing community.
+      </p>
+
+      <div class="row g-4">
+        <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="100">
+          <div class="stats-card">
+            <h3 class="stats-number">80%</h3>
+            <h4 class="stats-label">of Partner Campuses Reduce Overhead Costs</h4>
+            <p class="stats-info">By unifying credential management and payment processing, 1Card streamlines campus
+              operations, saving valuable time and resources.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="200">
-        <div class="stats-card">
-          <h3 class="stats-number">$1.6M<span>+</span></h3>
-          <h4 class="stats-label">in Total Digital Transactions Processed</h4>
-          <p class="stats-info">Our secure payment infrastructure handles thousands of transactions daily, ensuring quick, cashless payments for students and staff.</p>
+        <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="200">
+          <div class="stats-card">
+            <h3 class="stats-number">$1.6M<span>+</span></h3>
+            <h4 class="stats-label">in Total Digital Transactions Processed</h4>
+            <p class="stats-info">Our secure payment infrastructure handles thousands of transactions daily, ensuring
+              quick, cashless payments for students and staff.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="300">
-        <div class="stats-card">
-          <h3 class="stats-number">95%</h3>
-          <h4 class="stats-label">of Users Report a More Convenient Campus Experience</h4>
-          <p class="stats-info">From canteen bills to parking, 1Card simplifies campus life with a single, all-in-one solution.</p>
+        <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="300">
+          <div class="stats-card">
+            <h3 class="stats-number">95%</h3>
+            <h4 class="stats-label">of Users Report a More Convenient Campus Experience</h4>
+            <p class="stats-info">From canteen bills to parking, 1Card simplifies campus life with a single, all-in-one
+              solution.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="400">
-        <div class="stats-card">
-          <h3 class="stats-number">2.8M<span>+</span></h3>
-          <h4 class="stats-label">Secure ID Verifications Completed</h4>
-          <p class="stats-info">Our system verifies identities across multiple campus facilities, ensuring safety and security for everyone.</p>
+        <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="400">
+          <div class="stats-card">
+            <h3 class="stats-number">2.8M<span>+</span></h3>
+            <h4 class="stats-label">Secure ID Verifications Completed</h4>
+            <p class="stats-info">Our system verifies identities across multiple campus facilities, ensuring safety and
+              security for everyone.</p>
+          </div>
         </div>
       </div>
     </div>
+  </section>
+  <!-- End Stats Section -->
+
+  <!-- App Features Section -->
+<section class="app-features section">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center mb-5">
+        <div class="stats-badge">Financial Roadblocks</div>
+        <h2 class="section-title">Struggling with Campus Finances?</h2>
+        <p class="section-description">We get it. 1Card streamlines the process of handling tuition payments, canteen bills, printing costs, and more—so you can focus on your education, not your spreadsheets.</p>
+    </div>
   </div>
 </section>
-    <!-- End Stats Section -->
+   
 
   <!-- About Section -->
   <section id="about" class="about section">
