--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
   <!-- Stats Section -->
   <section class="stats-section">
     <div class="container text-center">
-      <div class="stats-badge">← Impressive Stats</div>
+      <div class="badge">
+              <i class="bi bi-dot"></i> 1Card Campus Solutions
+            </div>
 
       <h2 class="stats-title">Our Results in Numbers</h2>
       <p class="stats-description">
@@ -183,24 +185,22 @@
   <!-- End Stats Section -->
 
   <!-- App Features Section -->
-<section class="app-features section">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 text-center mb-5">
-        <div class="stats-badge">Financial Roadblocks</div>
-        <h2 class="section-title">Struggling with Campus Finances?</h2>
-        <p class="section-description">We get it. 1Card streamlines the process of handling tuition payments, canteen bills, printing costs, and more—so you can focus on your education, not your spreadsheets.</p>
-    </div>
-  </div>
-</section>
-   
-
-  <!-- About Section -->
-  <section id="about" class="about section">
+  <section id="about" class="about section py-5">
 
     <div class="container" data-aos="fade-up" data-aos-delay="100">
 
       <div class="row gy-4 align-items-center justify-content-between">
+        <!-- header -->
+        <div class="col-lg-12">
+          <div class="section-title text-center">
+            <div class="badge">
+              <i class="bi bi-dot"></i> 1Card Campus Solutions
+            </div>
+            <h2>Struggling with Campus Finances?</h2>
+            <p>We get it. 1Card streamlines the process of handling tuition payments, canteen bills, printing costs, and
+              more—so you can focus on your education, not your spreadsheets.</p>
+          </div>
+        </div>
 
         <div class="col-xl-5" data-aos="fade-up" data-aos-delay="200">
           <span class="about-meta">MORE ABOUT US</span>
@@ -1201,7 +1201,6 @@
 
   </section><!-- /Contact Section -->
 
-  </main>
 
   <footer id="footer" class="footer">
 
@@ -1288,7 +1287,8 @@
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+      class="bi bi-arrow-up-short"></i>
+  </a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
