refactor: remove unused React SVG and update footer styles for improved layout

--- a/index.html
+++ b/index.html
@@ -596,7 +596,8 @@
 
     </div>
 
-  </section><!-- /Testimonials Section -->
+  </section>
+  <!-- /Testimonials Section -->
 
   <!-- Stats Section -->
   <section id="stats" class="stats section">
@@ -641,7 +642,8 @@
 
     </div>
 
-  </section><!-- /Stats Section -->
+  </section>
+  <!-- /Stats Section -->
 
   <!-- Pricing Section -->
   <section id="pricing" class="pricing section light-background">
@@ -778,7 +780,8 @@
 
     </div>
 
-  </section><!-- /Pricing Section -->
+  </section>
+  <!-- /Pricing Section -->
 
   <!-- Faq Section -->
   <section class="faq-9 faq section light-background" id="faq">
@@ -859,91 +862,152 @@
 
       </div>
     </div>
-  </section><!-- /Faq Section -->
+  </section>
+  <!-- /Faq Section -->
 
-
-  <footer id="footer" class="footer">
-
-    <div class="container footer-top">
-      <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">iLanding</span>
+  <!-- Blog Articles Section -->
+  <section id="blog" class="section blog">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="section-title">
+            <div class="badge">
+              <i class="bi bi-dot dot-icon"></i> Blog Articles
+            </div>
+            <h2>The 1Card Insight Hub</h2>
+            <p>Stay updated with the latest trends and innovations transforming campus operations. Gain expert insights and success stories to empower your institution's digital journey.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <!-- Article 1 -->
+        <div class="col-md-4">
+          <div class="article-card">
+            <a href="#">
+              <div class="card-img">
+                <img src="assets/img/blog-img.avif" alt="">
+              </div>
+              <i class="bi bi-arrow-up-right-circle-fill arrow-icon"></i>
+              <div class="card-body">
+                <h5 class="card-title">The Future of Campus Management</h5>
+                <p class="card-date">Oct 11, 2024</p>
+              </div>
+            </div>
+            </a>
+        </div>
+        <!-- Article 2 -->
+        <div class="col-md-4">
+          <a href="#">
+            <div class="article-card">
+              <div class="card-img">
+                <img src="assets/img/blog-img.avif" alt="">
+              </div>
+              <i class="bi bi-arrow-up-right-circle-fill arrow-icon"></i>
+              <div class="card-body">
+                <h5 class="card-title">How to Manage Irregular Income with AI-Powered Financial Tools</h5>
+                <p class="card-date">Oct 10, 2024</p>
+              </div>
+            </div>
           </a>
-          <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+        </div>
+        <!-- Article 3 -->
+        <div class="col-md-4">
+          <div class="article-card">
+            <a href="#">
+              <div class="card-img">
+                <img src="assets/img/blog-img.avif" alt="">
+              </div>
+              <i class="bi bi-arrow-up-right-circle-fill arrow-icon"></i>
+              <div class="card-body">
+                <h5 class="card-title">How AI Can Help You Create Custom Budgets Tailored to Your Needs</h5>
+                <p class="card-date">Oct 9, 2024</p>
+              </div>
+            </div>
+            </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 text-center">
+          <div class="about-btn">
+            <a href="#">View All Articles</a>
           </div>
-          <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-          </div>
         </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
-          <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Nobis illum</h4>
-          <ul>
-            <li><a href="#">Ipsam</a></li>
-            <li><a href="#">Laudantium dolorum</a></li>
-            <li><a href="#">Dinera</a></li>
-            <li><a href="#">Trodelas</a></li>
-            <li><a href="#">Flexo</a></li>
-          </ul>
-        </div>
-
       </div>
     </div>
+  </section>
+  <!-- End Blog Articles Section -->
 
-    <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">iLanding</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed By <a
-          href="https://themewagon.com">ThemeWagon</a>
+  <!-- Footer Section -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <!-- Left Side: Logo, Address, Email, Contact, Social Media -->
+        <div class="col-md-4">
+          <div class="footer-logo">
+            <img src="assets/img/Logo.avif" alt="">
+          </div>
+          <div class="footer-info">
+            <p>Address: 64/3 Lake Circus, Kalabagan Dhaka-1205, Bangladesh</p>
+            <p><a href="mailto:saddam@daffodil-bd.com">saddam@daffodil-bd.com</a></p>
+            <p><a href="tel:+880175841337">+880 1758 411 337</a></p>
+            <div class="social-icons about-btn">
+              <a href="#"><i class="bi bi-facebook"></i></a>
+              <a href="#"><i class="bi bi-twitter"></i></a>
+              <a href="#"><i class="bi bi-instagram"></i></a>
+              <a href="#"><i class="bi bi-linkedin"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Middle: MENU and USEFUL Links on the Same Line -->
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="footer-links">
+                <h5>MENU</h5>
+                <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Features</a></li>
+                  <li><a href="#">Pricing</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="footer-links">
+                <h5>USEFUL</h5>
+                <ul>
+                  <li><a href="#">Privacy Policy</a></li>
+                  <li><a href="#">Cookie Policy</a></li>
+                  <li><a href="#">Terms of Service</a></li>
+                  <li><a href="#">Refund Policy</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Right Side: Download App -->
+        <div class="col-md-4">
+          <div class="download-app">
+            <h5>DOWNLOAD APP</h5>
+            <p>Manage your 1Card mobile app. Download it today for easy expense tracking and customized alerts.</p>
+            <div class="about-btn">
+              <a href="#" class="btn-app"><i class="bi bi-apple"></i> App Store</a>
+              <a href="#" class="btn-app"><i class="bi bi-google-play"></i> Google Play</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Footer Bottom -->
+      <div class="footer-bottom">
+        <p>© 2025 made by Daffodil Web</p>
       </div>
     </div>
-
   </footer>
+  <!-- End Footer Section -->
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
