refactor: remove AOS attributes from stats and feature sections for cleaner markup

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       </p>
 
       <div class="row g-4">
-        <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="100">
+        <div class="col-md-6 col-12">
           <div class="stats-card">
             <h3 class="stats-number">80%</h3>
             <h4 class="stats-label">of Partner Campuses Reduce Overhead Costs</h4>
@@ -145,7 +145,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="200">
+        <div class="col-md-6 col-12">
           <div class="stats-card">
             <h3 class="stats-number">$1.6M<span>+</span></h3>
             <h4 class="stats-label">in Total Digital Transactions Processed</h4>
@@ -154,7 +154,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="300">
+        <div class="col-md-6 col-12">
           <div class="stats-card">
             <h3 class="stats-number">95%</h3>
             <h4 class="stats-label">of Users Report a More Convenient Campus Experience</h4>
@@ -163,7 +163,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 col-12" data-aos="fade-up" data-aos-delay="400">
+        <div class="col-md-6 col-12">
           <div class="stats-card">
             <h3 class="stats-number">2.8M<span>+</span></h3>
             <h4 class="stats-label">Secure ID Verifications Completed</h4>
@@ -197,7 +197,7 @@
       <!-- Feature Content -->
       <div class="feature-content align-items-center justify-content-between ">
         <div class="row align-items-center justify-content-between">
-          <div class="col-xl-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-xl-6">
             <div class="feature-left">
               <div class="badge">
                 <i class="bi bi-dot"></i> Financial Management
@@ -238,7 +238,7 @@
             </div>
           </div>
 
-          <div class="col-xl-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-xl-6">
             <div class="feature-left">
               <div class="badge">
                 <i class="bi bi-dot"></i> Financial Management
@@ -270,7 +270,7 @@
       <!-- Feature Content 3 -->
       <div class="feature-content">
         <div class="row align-items-center justify-content-between">
-          <div class="col-xl-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-xl-6">
             <div class="feature-left">
               <div class="badge">
                 <i class="bi bi-dot"></i> Financial Management
@@ -303,11 +303,6 @@
           </div>
         </div>
       </div>
-
-
-
-
-
     </div>
   </section>
   <!-- App Features Section -->
