feat: add responsive design styles for improved layout across devices

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 
 <body>
@@ -136,7 +137,7 @@
       </p>
 
       <div class="row g-4">
-        <div class="col-md-6 col-12">
+        <div class="col-lg-6 col-12">
           <div class="stats-card">
             <h3 class="stats-number">80%</h3>
             <h4 class="stats-label">of Partner Campuses Reduce Overhead Costs</h4>
@@ -145,7 +146,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 col-12">
+        <div class="col-lg-6 col-12">
           <div class="stats-card">
             <h3 class="stats-number">$1.6M<span>+</span></h3>
             <h4 class="stats-label">in Total Digital Transactions Processed</h4>
@@ -154,7 +155,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 col-12">
+        <div class="col-lg-6 col-12">
           <div class="stats-card">
             <h3 class="stats-number">95%</h3>
             <h4 class="stats-label">of Users Report a More Convenient Campus Experience</h4>
@@ -163,7 +164,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 col-12">
+        <div class="col-lg-6 col-12">
           <div class="stats-card">
             <h3 class="stats-number">2.8M<span>+</span></h3>
             <h4 class="stats-label">Secure ID Verifications Completed</h4>
@@ -178,7 +179,7 @@
 
 
   <!-- App Features Section -->
-  <section id="about" class="about section py-5">
+  <section id="about" class="about section">
     <div class="container" data-aos="fade-up" data-aos-delay="100">
       <!-- Header -->
       <div class="row">
@@ -207,12 +208,12 @@
                 canteen bills, printing costs, and more—all in real time, from one unified dashboard.</p>
               <div class="feature-list-section">
                 <ul class="feature-list row gap-3">
-                  <li class="col-12 col-md-6 feature-item"><i class="bi bi-check-circle-fill"></i>Real-Time Updates</li>
-                  <li class="col-12 col-md-6 feature-item"><i class="bi bi-check-circle-fill"></i>Automatic
+                  <li class="col-12  feature-item"><i class="bi bi-check-circle-fill"></i>Real-Time Updates</li>
+                  <li class="col-12  feature-item"><i class="bi bi-check-circle-fill"></i>Automatic
                     Categorization</li>
-                  <li class="col-12 col-md-6 feature-item"><i class="bi bi-check-circle-fill"></i>Unified Account View
+                  <li class="col-12 feature-item"><i class="bi bi-check-circle-fill"></i>Unified Account View
                   </li>
-                  <li class="col-12 col-md-6 feature-item"><i class="bi bi-check-circle-fill"></i>Detailed Spending
+                  <li class="col-12 feature-item"><i class="bi bi-check-circle-fill"></i>Detailed Spending
                     Insights</li>
                 </ul>
               </div>
@@ -249,13 +250,13 @@
                 service.</p>
               <div class="feature-list-section">
                 <ul class="feature-list row gap-3">
-                  <li class="col-12 col-md-6 feature-item"><i class="bi bi-check-circle-fill"></i>Canteen & Food
+                  <li class="col-12 feature-item"><i class="bi bi-check-circle-fill"></i>Canteen & Food
                     Services</li>
-                  <li class="col-12 col-md-6 feature-item"><i class="bi bi-check-circle-fill"></i>Printing & Photocopy
+                  <li class="col-12 feature-item"><i class="bi bi-check-circle-fill"></i>Printing & Photocopy
                   </li>
-                  <li class="col-12 col-md-6 feature-item"><i class="bi bi-check-circle-fill"></i>Parking & Access
+                  <li class="col-12 feature-item"><i class="bi bi-check-circle-fill"></i>Parking & Access
                     Control</li>
-                  <li class="col-12 col-md-6 feature-item"><i class="bi bi-check-circle-fill"></i>Real-Time
+                  <li class="col-12 feature-item"><i class="bi bi-check-circle-fill"></i>Real-Time
                     Synchronization</li>
                 </ul>
               </div>
@@ -280,13 +281,13 @@
                 variety of convenient, cashless solutions to keep you moving on campus.</p>
               <div class="feature-list-section">
                 <ul class="feature-list row gap-3">
-                  <li class="col-12 col-md-6 feature-item"><i class="bi bi-check-circle-fill"></i>Top-Up Convenience
+                  <li class="col-12  feature-item"><i class="bi bi-check-circle-fill"></i>Top-Up Convenience
                   </li>
-                  <li class="col-12 col-md-6 feature-item"><i class="bi bi-check-circle-fill"></i>Credit-Based Services
+                  <li class="col-12 feature-item"><i class="bi bi-check-circle-fill"></i>Credit-Based Services
                   </li>
-                  <li class="col-12 col-md-6 feature-item"><i class="bi bi-check-circle-fill"></i>Instant Payment
+                  <li class="col-12 feature-item"><i class="bi bi-check-circle-fill"></i>Instant Payment
                     Confirmation</li>
-                  <li class="col-12 col-md-6 feature-item"><i class="bi bi-check-circle-fill"></i>Visual Spending Alerts
+                  <li class="col-12 feature-item"><i class="bi bi-check-circle-fill"></i>Visual Spending Alerts
                   </li>
                 </ul>
               </div>
@@ -322,7 +323,7 @@
       <!-- Feature Cards -->
       <div class="row g-4">
         <!-- Tuition Fees Payment Service -->
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-12">
           <div class="feature-card">
             <i class="bi bi-arrow-up-right-circle-fill arrow-icon"></i>
             <div class="icon-placeholder">Tuition Fees Image</div>
@@ -333,7 +334,7 @@
         </div>
 
         <!-- Smart Payment Options -->
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-12">
           <div class="feature-card">
             <i class="bi bi-arrow-up-right-circle-fill arrow-icon"></i>
             <div class="icon-placeholder">Smart Payment Image</div>
@@ -344,7 +345,7 @@
         </div>
 
         <!-- Hassle-Free Top-Ups -->
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-12">
           <div class="feature-card">
             <i class="bi bi-arrow-up-right-circle-fill arrow-icon"></i>
             <div class="icon-placeholder">Top-Ups Image</div>
@@ -354,7 +355,7 @@
         </div>
 
         <!-- Automated Fee Transfers -->
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-12">
           <div class="feature-card">
             <i class="bi bi-arrow-up-right-circle-fill arrow-icon"></i>
             <div class="icon-placeholder">Fee Transfers Image</div>
@@ -365,7 +366,7 @@
         </div>
 
         <!-- Event & Access Management -->
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-12">
           <div class="feature-card">
             <i class="bi bi-arrow-up-right-circle-fill arrow-icon"></i>
             <div class="icon-placeholder">
@@ -380,7 +381,6 @@
 
     </div>
   </section>
-
 
 
   <!-- Features Section -->
@@ -617,7 +617,7 @@
   <section class="faq py-5 bg-light">
     <div class="container py-5">
       <div class="row">
-        <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+        <div class="col-lg-3 col-12 mb-5 mb-md-0">
           <div class="faq-section-title">
             <div class="badge">
               <i class="bi bi-dot"></i> FAQ
@@ -633,7 +633,7 @@
           </div>
         </div>
 
-        <div class="col-lg-9 col-md-6">
+        <div class="col-lg-9 col-12">
           <div class="accordion accordion-flush" id="faqAccordion">
             <div class="accordion-item">
               <h2 class="accordion-header">
@@ -740,11 +740,11 @@
     <div class="container">
       <div class="row align-items-center download-content">
         <!-- Left Side: Phone Image -->
-        <div class="col-md-6 mb-4 mb-md-0 text-center text-md-start">
+        <div class="col-lg-6 col-12 mb-4 mb-md-0 text-center text-md-start">
           <img src="assets/img/Mobile.avif" alt="1Card Mobile App" class="phone-img">
         </div>
         <!-- Right Side: Text and Buttons -->
-        <div class="col-md-6">
+        <div class="col-lg-6 col-12">
           <div class="download-text">
             <h2>Download the 1Card Mobile App</h2>
             <p>Manage your campus finances on the go. Get real-time transaction updates, tap-to-pay features, and secure
@@ -838,7 +838,7 @@
     <div class="container">
       <div class="row">
         <!-- Left Side: Logo, Address, Email, Contact, Social Media -->
-        <div class="col-md-4">
+        <div class="col-lg-4 col-12">
           <div class="footer-logo">
             <img src="assets/img/Logo.avif" alt="">
           </div>
@@ -856,9 +856,9 @@
         </div>
 
         <!-- Middle: MENU and USEFUL Links on the Same Line -->
-        <div class="col-md-4">
+        <div class="col-lg-4 col-12">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6 col-12">
               <div class="footer-links">
                 <h5>MENU</h5>
                 <ul>
@@ -870,7 +870,7 @@
                 </ul>
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6 col-12">
               <div class="footer-links">
                 <h5>USEFUL</h5>
                 <ul>
@@ -885,7 +885,7 @@
         </div>
 
         <!-- Right Side: Download App -->
-        <div class="col-md-4">
+        <div class="col-lg-4 col-12">
           <div class="download-app">
             <h5>DOWNLOAD APP</h5>
             <p>Manage your 1Card mobile app. Download it today for easy expense tracking and customized alerts.</p>
